--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -59,7 +59,7 @@
             <form
               name="reserve"             
               method="get"
-              onsubmit="return validate();"
+              onsubmit="return validateForm();"
             >
               <div
                 class="formData">
@@ -107,9 +107,10 @@
                 <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
                 <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
               </div>
-              <p class="text-label">Quelles villes ?</p>
+             
               <div
                 class="formData" id="town">
+                <label>Quelles villes ?</label><br>
                 <input
                   class="checkbox-input"
                   type="radio"
@@ -171,6 +172,7 @@
                   id="location6"
                   name="location"
                   value="Portland"
+                  
                 />
                 <label class="checkbox-label" for="location6">
                   <span class="checkbox-icon"></span>
@@ -186,7 +188,7 @@
                   id="checkbox1"
                   checked
                 />
-                <label class="checkbox2-label" for="checkbox1" required>
+                <label class="checkbox2-label" for="checkbox1" required name="checkbox1">
                   <span class="checkbox-icon"></span>
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
@@ -198,7 +200,7 @@
                 </label>
                 <br>
               </div>
-              <button class="btn-submit validate-btn">
+              <button class="btn-submit validate-btn" id="btn-validate">
                 C'est parti
               </button>
             </form>
