--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                   type="text"
                   id="first"
                   name="first"
-                  minlength="2"
+                  
                 /><br>
               </div>
               <div
@@ -106,7 +106,7 @@
               <div
                 class="formData">
                 <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
-                <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
+                <input type="number" class="text-control" id="quantity" name="quantity">
               </div>
              
               <div
